--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -3,5 +3,6 @@
 {% block title %}Login{% endblock %}
 
 {% block body %}
-    <h1>Hola</h1>
+    <h1>Bienvenido, {{ current_user.fullname }}</h1>
+    <a class="btn btn-secondary" href="{{ url_for('logout') }}">Cerrar Sesión</a>
 {% endblock %}
