--- a/src/templates/auth/login.html
+++ b/src/templates/auth/login.html
@@ -9,8 +9,19 @@
 {% block body %}
 <form class="form-signin w-100 m-auto" action="/login" method="post">
     <img class="mb-4" src="{{url_for('static', filename='img/logo.png')}}" alt="" width="100" height="100">
-    <h1 class="h3 mb-3 fw-normal">Inicio De Sesión</h1>
-
+    {% with messages = get_flashed_messages() %}
+    {% if messages %}
+    <br />
+    {% for message in messages %}
+    <div class="alert alert-primary alert-dismissible" role="alert">
+        <strong>{{ message }}</strong>
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+    {% endfor %}
+    {% endif %}
+    {% endwith %}
+    <h1 class="h3 mb-3 fw-normal">Asistencia Virtual</h1>
+    <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
     <div class="form-floating">
       <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com" name="email">
       <label for="floatingInput">Correo Electrónico</label>
@@ -20,12 +31,6 @@
       <label for="floatingPassword">Contraseña</label>
     </div>
 
-    <div class="form-check text-start my-3">
-      <input class="form-check-input" type="checkbox" value="remember-me" id="flexCheckDefault">
-      <label class="form-check-label" for="flexCheckDefault">
-        Recordar
-      </label>
-    </div>
     <button class="btn btn-primary w-100 py-2" type="submit">Entrar</button>
     <p class="mt-5 mb-3 text-body-secondary">&copy; 2024</p>
   </form>
